# Fast_zero

./: :memory  compose.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  settings.py
fast_zero/entities/: user.py
fast_zero/models/: User.py
fast_zero/routers/: auth.py  todos.py  users.py
fast_zero/schemas/: todo.py  user.py
fast_zero/types/: index.py
fast_zero/utils/: security.py
github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 8c66d73321e6_add_fields_updated_and_created_at.py  97a347f307dc_add_updated_at_to_user.py  b023d553d987_create_users_table.py  bd874d4d683d_create_users_and_todo_tables.py  cb05a68f8714_create_users_table.py  dee5264bccd3_create_user_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
